@@ -143,6 +143,7 @@ All (GUI):
 - Add wxToolbook::EnablePage() (Stefan Ziegler).
 - Adapt AUI colours to system colour changes (Daniel Kulp).
 - Fix removing and inserting pages in wxToolbook (Stefan Ziegler).
+- Fix bug in template selection in docview framework (jwiesemann).
 
 wxGTK:
 
